CHANGE: played with eclipse FindBugs plugin and replace creation of Longs with the caching routine
git-svn-id: https://cvs.dai-labor.de/jiac/jiac-tng/trunk@20739 d8bac29e-b7f5-0310-9bdb-a06bcefdf3b8